DOC-29872 * Fixing issue with arrow on Safari.

--- a/dcomms_theme/sass/components/link-arrow/_link-arrow.scss
+++ b/dcomms_theme/sass/components/link-arrow/_link-arrow.scss
@@ -12,6 +12,7 @@
   padding: 0 .25rem;
   height: 10px;
   width: 10px;
+  line-height: 10px;
 }
 
 .link-arrow--after,
